# OFFICE

./: App.tsx  LOGLINE-FOUNDATION-ETS.md  README.md  constants.tsx  index.css  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
LLM UX/: LLM-UI-UX.md
components/: AssistantOverlay.tsx  ChatWindow.tsx  FileTree.tsx  NewEntityModal.tsx  PreviewModal.tsx  ProfileDrawer.tsx  ProtocolMonitor.tsx  RichContent.tsx  Sidebar.tsx  StatusStories.tsx
components/chat/: AddAssetModal.tsx  MessageItem.tsx  MessageList.tsx  OptimisticIndicator.tsx  PinnedAssetBar.tsx
components/onboarding/: OnboardingFlow.tsx
components/profile/: SettingsSection.tsx
components/rich/: AlertView.tsx  CodeView.tsx  FilesystemView.tsx  TerminalView.tsx  WebView.tsx
components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Skeleton.tsx
context/: OnboardingContext.tsx  ThemeContext.tsx
db/migrations/: 001_init.sql
server/: index.mjs  package.json
server/src/: auth.js  config.js  db.js  index.js  ledger.js
services/: apiClient.ts  eventBus.ts  network.ts  storage.ts  ublApi.ts
ubl-ecosystem/: README.md  docker-compose.yml
ubl-ecosystem/messenger/: Cargo.toml  Dockerfile  README.md
ubl-ecosystem/messenger/config/: production.toml
ubl-ecosystem/messenger/src/: main.rs
ubl-ecosystem/messenger/src/conversation/: mod.rs
ubl-ecosystem/messenger/src/intelligence/: mod.rs
ubl-ecosystem/messenger/src/message/: mod.rs
ubl-ecosystem/messenger/src/office_client/: mod.rs
ubl-ecosystem/messenger/src/ubl_client/: mod.rs
ubl-ecosystem/messenger/src/ui/: api.rs  mod.rs
ubl-ecosystem/office/: Cargo.toml  Dockerfile
ubl-ecosystem/office/src/: lib.rs  main.rs
ubl-ecosystem/office/src/api/: http.rs  websocket.rs
ubl-ecosystem/office/src/context/: builder.rs  frame.rs  memory.rs  mod.rs
ubl-ecosystem/office/src/entity/: mod.rs
ubl-ecosystem/office/src/governance/: dreaming.rs  mod.rs  sanity_check.rs  simulation.rs
ubl-ecosystem/office/src/llm/: mod.rs
ubl-ecosystem/office/src/session/: mod.rs
ubl-ecosystem/office/src/ubl_client/: events.rs  mod.rs
utils/: security.ts
