[package]
name = "messenger"
version = "0.1.0"
edition = "2021"
authors = ["UBL Team"]
description = "UBL Messenger - Messaging system with OFFICE integration"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP Server
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Cryptography
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
sha2 = "0.10"
blake3 = "1"
rand = "0.8"
hex = "0.4"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"

# Async utilities
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"

# WebSocket
tokio-tungstenite = "0.21"

# OFFICE client
office = { path = "../office" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[[bin]]
name = "messenger"
path = "src/main.rs"
